[tool.poetry]
name = "SessionManager"
version = "1.0.0"
description = "The SessionManager for the CogCF Barrier"
authors = ["Stanislas Nanchen <240862+stanislas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
